from FacilityEnum import FacilityEnum
class BasicFacility():
    
    facilityName = "ss"
    facility_supply_area = ""
    currentlyOccupiedTrainingPositions = 0
    maxAvailableTrainingPositions = 0
    numberInternEmployee = 0
    targetHours = 0
    hours_a_day = 0
    practicalGuides = []
    regularTrainees = 0
    externTrainees = 0
    startData = 0
    endData = 0
    midData = 0
    facilityID = 0
    number_supply_area=0
